fixed spacing

--- a/css/aavsla.webflow.css
+++ b/css/aavsla.webflow.css
@@ -178,8 +178,7 @@
 
 .people {
   width: 100vw;
-  height: 1200px;
-  padding-bottom: 50px;
+  height: 1300px;
   background-color: #fff;
 }
 
